@@ -7,6 +7,10 @@ import kr.or.kosa.backend.chatbot.dto.MessageDto;
 import kr.or.kosa.backend.chatbot.mapper.ChatbotMessageMapper;
 
 import lombok.RequiredArgsConstructor;
+
+import org.springframework.ai.openai.OpenAiChatModel;
+import org.springframework.ai.chat.messages.UserMessage;
+
 import org.springframework.stereotype.Service;
 
 import java.time.format.DateTimeFormatter;
@@ -18,7 +22,7 @@ import java.util.stream.Collectors;
 public class ChatMessageServiceImpl implements ChatMessageService {
 
     private final ChatbotMessageMapper chatbotMessageMapper;
-    // private final OpenAiClient openAiClient;  // 나중에 추가
+    private final OpenAiChatModel openAiChatModel;
 
     private static final DateTimeFormatter FORMATTER =
             DateTimeFormatter.ofPattern("yyyy-MM-dd HH:mm:ss");
@@ -27,7 +31,7 @@ public class ChatMessageServiceImpl implements ChatMessageService {
     public ChatResponseDto sendMessage(ChatRequestDto request) {
         Long sessionId = request.getSessionId() != null ? request.getSessionId() : 1L;
 
-        // 1) user 메시지 저장
+        // 1) User 메시지 저장
         ChatbotMessage userMsg = new ChatbotMessage();
         userMsg.setSessionId(sessionId);
         userMsg.setUserId(request.getUserId());
@@ -35,9 +39,10 @@ public class ChatMessageServiceImpl implements ChatMessageService {
         userMsg.setContent(request.getContent());
         chatbotMessageMapper.insertMessage(userMsg);
 
-        // 2) AI 호출해서 assistant 응답 생성 (여기는 임시로 하드코딩)
-        String assistantText = "임시 응답입니다. 나중에 OpenAI 연동 부분에 바꾸세요.";
+        // 2) OpenAI 호출
+        String assistantText = callOpenAI(request.getContent());
 
+        // 3) assistant 메시지 저장
         ChatbotMessage assistantMsg = new ChatbotMessage();
         assistantMsg.setSessionId(sessionId);
         assistantMsg.setUserId(null);
@@ -45,8 +50,19 @@ public class ChatMessageServiceImpl implements ChatMessageService {
         assistantMsg.setContent(assistantText);
         chatbotMessageMapper.insertMessage(assistantMsg);
 
-        // 3) 최신 N개 메시지 리턴
+        // 4) 최신 메시지 반환
         return getMessages(sessionId, 50);
+    }
+
+    /**
+     * OpenAI 호출
+     */
+    private String callOpenAI(String userMessage) {
+
+        // 최신 Spring AI 방식 → 옵션 없이 바로 호출
+        return openAiChatModel.call(
+                new UserMessage(userMessage)
+        );
     }
 
     @Override
@@ -64,7 +80,7 @@ public class ChatMessageServiceImpl implements ChatMessageService {
                     );
                     return dto;
                 })
-                .collect(Collectors.toList());
+                .toList();   // ← 불변 리스트, 권장 방식
 
         ChatResponseDto resp = new ChatResponseDto();
         resp.setSessionId(sessionId);
